@@ -1,3 +1,8 @@
+2002-04-17  Rachel Hestilow  <hestilow@ximian.com>
+
+	* applier.c (need_root_pixmap_p): Return TRUE if pixmap is NULL.
+	(create_pixmap): Only set pixmap if not already set.
+
 2002-04-17  Anders Carlsson  <andersca@gnu.org>
 
 	* preferences.c: (bg_preferences_finalize), (bg_preferences_load):
